fixed alignment

--- a/src/app/main/dashboard/date-time/date-time.component.scss
+++ b/src/app/main/dashboard/date-time/date-time.component.scss
@@ -11,7 +11,12 @@
 @import url(https://fonts.googleapis.com/css?family=Sanchez&display=swap%27);
 
 .time {
-  display: inline;
+  position: absolute;
+  left: 0%;
+  right: 14%;
+  top: 15%;
+  bottom: 0%;
+  
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -23,7 +28,12 @@
 }
 
 .am {
-  display: inline;
+  position: absolute;
+  left: 0%;
+  right: 8%;
+  top: 19.5%;
+  bottom: 0%;
+
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -35,6 +45,12 @@
 }
 
 .date {
+  position: absolute;
+  left: 0%;
+  right: 8%;
+  top: 22%;
+  bottom: 0%;
+
   font-family: Sanchez;
   font-style: normal;
   font-weight: normal;
